# alaniz-cipher

./: .gitignore  LICENSE  README.md  pyproject.toml
alaniz/: __init__.py
alaniz/core/: __init__.py  field.py  field_ext.py  graph.py  sheaf.py
alaniz/crypto/: __init__.py  kem.py  prg.py  protocol.py  sigma.py
alaniz/demo/: demo_basic.py
experiments/: 01_scaling_verification.py  02_cpa_attack_analysis.py  03_uniqueness_analysis.py  04_sigma_selection.py  05_complexity_analysis.py  06_postquantum_analysis.py  07_semi_regularity.py  08_weak_keys.py  09_nonce_robustness.py  10_centralizer.py  11_kem_verification.py
tests/: test_protocol.py  test_protocol_v3.py
