[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alaniz-cipher"
version = "3.0.0"
description = "Alaniz Cipher v3: Sheaf-based post-quantum encryption via vector-valued finite field permutations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Lucas Alaniz Pintos", email = "lucas.alaniz@ineco.com"},
]
dependencies = [
    "numpy>=1.24",
    "galois>=0.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "sphinx>=6.0"]

[tool.setuptools.packages.find]
include = ["alaniz*"]
exclude = ["tests*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
